# data-agent

./: .env.example  Makefile  README.md  bootstrap_census_db.py  docker-compose.yml  init.sql  pyproject.toml
backend/: Dockerfile  config.py  pyproject.toml
backend/agent/: agent.py  prompts.py
backend/api/: main.py  models.py  routes.py
backend/database/: bootstrap_census_db.py  init.sql  manager.py
frontend/: package-lock.json  package.json
frontend/app/components/: BarChart.tsx  ChartDisplay.tsx  ConversationHistory.tsx  DataTable.tsx  ScatterChart.tsx  SearchBar.tsx  SuggestedPrompts.tsx
frontend/app/routes/: home.tsx
frontend/app/services/: api.ts
frontend/app/types/: api.ts
frontend/app/welcome/: welcome.tsx
