[tool.poetry]
name = "data-agent"
version = "0.1.0"
description = "Census data fetching and database management"
authors = ["User <user@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-anthropic = "^0.1.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.10.1"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
